--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react-app": "^9.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.5.1",
     "history": "^4.9.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
